--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <!-- 메뉴 카테고리 -->
             <ul id="main_category" class="none_tablet">
-                <li><a href="#">New Releases</a></li>
+                <li><a href="">New Releases</a></li>
                 <li><a href="#">Men</a></li>
                 <li><a href="#">Women</a></li>
                 <li><a href="#">Kids</a></li>
@@ -289,6 +289,9 @@
                 </div>
             </div>
 
+            <!-- scroll Theme -->
+            <!-- featured shoes -->
+
             <div>
                 <h4>Featured Shoes</h4>
                 <div class="feature_shoes_container">
@@ -352,50 +355,8 @@
                 </div>
             </div>
 
-            <!-- <div class="row">
-                <h4>Featured Shoes</h4>
-                <div class="col-sm-6">
-                    <div class="card ">
-                        <img src="./image_lee/index_image/index_product_item02.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">나이키 데이브레이크</h5>
-                            <p class="card-text">여성 신발 라이프스타일</p>
-                            <p class="card-text">119,000원</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img src="./image_lee/index_image/index_product_item12.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">나이키 에어맥스 97</h5>
-                            <p class="card-text">남성 신발 라이프스타일</p>
-                            <p class="card-text">199,000원</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 none_tablet">
-                    <div class="card">
-                        <img src="./image_lee/index_image/index_product_item13.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">나이키 코트 레거시</h5>
-                            <p class="card-text">여성 뮬</p>
-                            <p class="card-text">69,000원</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 none_tablet">
-                    <div class="card">
-                        <img src="./image_lee/index_image/index_product_item14.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">인빈서블 런 플라이니트</h5>
-                            <p class="card-text">여성 신발 러닝</p>
-                            <p class="card-text">199,000원</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
+            <!-- divide Theme -->
+            <!-- apparel essentials -->
             <div>
                 <h4>Apparel Essentials</h4>
                 <div id="apparel_container">
@@ -410,12 +371,14 @@
             </div>
 
         </article>
+
+        <!-- footer -->
         <footer>
             <div id="information_region">
                 <div>
                     <ul>
                         <li><a href="#">주문배송</a></li>
-                        <li><a href="./store.html">매장안내</a></li>
+                        <li><a href="http://moondroid.dothome.co.kr/store.html">매장안내</a></li>
                         <li><a href="#">나이키 트레이닝 가이드</a></li>
                         <li><a href="#">로그인</a></li>
                         <li><a href="#">멤버 가입</a></li>
