메뉴 이름 변경

--- a/men.html
+++ b/men.html
@@ -31,10 +31,10 @@
             <img id="Nike_logo" src="./image_hong/nike_logo.png">
             <div id="main_menu">                        
                 <ul class="header-bottom-nav">                
-                    <li><a href="#" style="margin-left: 30px;">Men</a></li>
-                    <li><a href="#">Women</a></li>
-                    <li><a href="#" style="margin-left: 20px;">Kids</a></li>
-                    <li><a href="#">Sale</a></li>
+                    <li><a href="#">New Releases</a></li>
+                    <li><a href="#">Men</a></li>
+                    <li><a href="#" style="margin-left: 20px;">Women</a></li>
+                    <li><a href="#">Kids</a></li>
                 </ul>
             </div>
             
