--- a/board2_lee.html
+++ b/board2_lee.html
@@ -80,6 +80,10 @@
                     <li><a href="">멤버십</a></li>
                 </ul>
             </div>
+
+            <div>
+                <form action=""></form>
+            </div>
             
         </article>
 
