add sub menu in desktop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" type="image⁄x-icon" href="./image_lee/index_icon/logo_nike_title.jpg">
     <title>나이키. Just Do it. Nike.com</title>
 
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -49,11 +52,11 @@
 
             <!-- 메뉴 카테고리 -->
             <ul id="main_category" class="none_tablet">
-                <li><a href="./new.html">New Releases</a></li>
-                <li><a href="./men.html">Men</a></li>
-                <li><a href="./women.html">Women</a></li>
-                <li><a href="./kid.html">Kids</a></li>
-                <li><a href="#">Sale</a></li>
+                <li class="main_category_items"><a href="./new.html">New Releases</a></li>
+                <li class="main_category_items"><a href="./men.html">Men</a></li>
+                <li class="main_category_items"><a href="./women.html">Women</a></li>
+                <li class="main_category_items"><a href="./kid.html">Kids</a></li>
+                <li class="main_category_items"><a href="#">Sale</a></li>
             </ul>
             <span id="option_menu_region" class="none_tablet">
                 <!-- 검색바 -->
@@ -79,12 +82,199 @@
 
         </nav>
         <!-- 네이게이션 메가메뉴 -->
-        <div id="navigationFlow">
-
+        <div class="none_tablet" id="mega_menu_container">
+            <div class="none_tablet navigationFlow">
+                <ul>
+                    <li><a href="./new.html">New & Featured</a></li>
+                    <li><a href="./new.html">신상품 전체보기</a></li>
+                    <li><a href="./new.html">SNKRS</a></li>
+                    <li><a href="./new.html">에어맥스 97</a></li>
+                    <li><a href="./new.html">에어 포스 1</a></li>
+                    <li><a href="./new.html">ACG</a></li>
+                    <li><a href="./new.html">NikeLab</a></li>
+                    <li><a href="./new.html">NEW TO SALE</a></li>
+                </ul>
+                <ul>
+                    <li><a href="./new.html">New For Men</a></li>
+                    <li><a href="./new.html">신발</a></li>
+                    <li><a href="./new.html">의류</a></li>
+                    <li><a href="./new.html">용품</a></li>
+                    <li><a href="./new.html">전체보기</a></li>
+                </ul>./new.html
+                <ul>./new.html
+                    <li><a href="./new.html">New For Women</a></li>
+                    <li><a href="./new.html">신발</a></li>
+                    <li><a href="./new.html">의류</a></li>
+                    <li><a href="./new.html">용품</a></li>
+                    <li><a href="./new.html">전체보기</a></li>
+                </ul>./new.html
+                <ul>./new.html
+                    <li><a href="./new.html">New For Kids</a></li>
+                    <li><a href="./new.html">신발</a></li>
+                    <li><a href="./new.html">의류</a></li>
+                    <li><a href="./new.html">용품</a></li>
+                    <li><a href="./new.html">전체보기</a></li>
+                </ul>
+            </div>
+            <div class="none_tablet navigationFlow">
+                <ul>
+                    <li><a href="./men.html">New & Featured</a></li>
+                    <li><a href="./men.html">신상품</a></li>
+                    <li><a href="./men.html">SNKRS</a></li>
+                    <li><a href="./men.html">THE BEST</a></li>
+                    <li><a href="./men.html">MEMBER SHOP</a></li> 
+                    <li><a href="./men.html">스프링 재킷 컬렉션</a></li>
+                    <li><a href="./men.html">스우시 컬렉션</a></li>
+                    <li><a href="./men.html">1 ON 1 상품 설명 서비스</a></li>
+                </ul>./men.html
+                <ul>./men.html
+                    <li><a href="./men.html">신발</a></li>
+                    <li><a href="./men.html">신발 전체</a></li>
+                    <li><a href="./men.html">라이프스타일</a></li>
+                    <li><a href="./men.html">러닝</a></li>
+                    <li><a href="./men.html">트레이닝 & 짐</a></li>
+                    <li><a href="./men.html">농구</a></li>
+                    <li><a href="./men.html">조던</a></li>
+                    <li><a href="./men.html">축구</a></li>
+                </ul>./men.html
+                <ul>./men.html
+                    <li><a href="./men.html">의류</a></li>
+                    <li><a href="./men.html">의류 전체</a></li>
+                    <li><a href="./men.html">후디 & 크루</a></li>
+                    <li><a href="./men.html">팬츠 & 타이즈</a></li>
+                    <li><a href="./men.html">탑 & 티셔츠</a></li>
+                    <li><a href="./men.html">재킷 & 베스트</a></li>
+                    <li><a href="./men.html">숏 팬츠</a></li>
+                    <li><a href="./men.html">나이키 프로</a></li>
+                </ul>./men.html
+                <ul>./men.html
+                    <li><a href="./men.html">스포츠</a></li>
+                    <li><a href="./men.html">러닝</a></li>
+                    <li><a href="./men.html">트레이닝 & 짐</a></li>
+                    <li><a href="./men.html">농구</a></li>
+                    <li><a href="./men.html">축구</a></li>
+                    <li><a href="./men.html">스케이트보딩</a></li>
+                    <li><a href="./men.html">골프</a></li>
+                </ul>
+            </div>
+            <div class="none_tablet navigationFlow">
+                <ul>
+                    <li><a href="./women.html">New & Featured</a></li>
+                    <li><a href="./women.html">신상품</a></li>
+                    <li><a href="./women.html">SNKRS</a></li>
+                    <li><a href="./women.html">THE BEST</a></li>
+                    <li><a href="./women.html">MEMBER SHOP</a></li> 
+                    <li><a href="./women.html">아이콘 클래쉬 컬렉션</a></li>
+                    <li><a href="./women.html">에어조틱 컬렉션</a></li>
+                    <li><a href="./women.html">홈트레이닝 컬렉션</a></li>
+                    <li><a href="./women.html">1 ON 1 상품 설명 서비스</a></li>
+                </ul>./women.html
+                <ul>./women.html
+                    <li><a href="./women.html">신발</a></li>
+                    <li><a href="./women.html">신발 전체</a></li>
+                    <li><a href="./women.html">라이프스타일</a></li>
+                    <li><a href="./women.html">러닝</a></li>
+                    <li><a href="./women.html">트레이닝 & 짐</a></li>
+                    <li><a href="./women.html">농구</a></li>
+                    <li><a href="./women.html">조던</a></li>
+                    <li><a href="./women.html">축구</a></li>
+                </ul>./women.html
+                <ul>./women.html
+                    <li><a href="./women.html">의류</a></li>
+                    <li><a href="./women.html">의류 전체</a></li>
+                    <li><a href="./women.html">스포츠 브라</a></li>
+                    <li><a href="./women.html">후디 & 크루</a></li>
+                    <li><a href="./women.html">타이즈 & 레깅스</a></li>
+                    <li><a href="./women.html">팬츠 & 숏 팬츠</a></li>
+                    <li><a href="./women.html">탑 & 티셔츠</a></li>
+                    <li><a href="./women.html">재킷 & 베스트</a></li>
+                    <li><a href="./women.html">스커트 & 드레스</a></li>
+                    <li><a href="./women.html">요가</a></li>
+                </ul>./women.html
+                <ul>./women.html
+                    <li><a href="./women.html">스포츠</a></li>
+                    <li><a href="./women.html">러닝</a></li>
+                    <li><a href="./women.html">트레이닝 & 짐</a></li>
+                    <li><a href="./women.html">축구</a></li>
+                    <li><a href="./women.html">골프</a></li>
+                    <li><a href="./women.html">테니스</a></li>
+                    <li><a href="./women.html">요가</a></li>
+                </ul>
+            </div>
+            <div class="none_tablet navigationFlow">
+                <ul>
+                    <li><a href="./kid.html">New & Featured</a></li>
+                    <li><a href="./kid.html">신상품</a></li>
+                    <li><a href="./kid.html">GOOD PRICE 컬렉션</a></li>
+                    <li><a href="./kid.html">스프링 컬렉션</a></li>
+                    <li><a href="./kid.html">나이키 키즈 클래식</a></li> 
+                    <li><a href="./kid.html">조던 키즈</a></li>
+                    <li><a href="./kid.html">아이들을 위한 선물</a></li>
+                    <li><a href="./kid.html">SALE</a></li>
+                </ul>./kid.html
+                <ul>./kid.html
+                    <li><a href="./kid.html">신발</a></li>
+                    <li><a href="./kid.html">베이비(160mm이하)</a></li>
+                    <li><a href="./kid.html">리틀키즈(165~220mm)</a></li>
+                    <li><a href="./kid.html">주니어(225~250mm)</a></li>
+                    <li><a href="./kid.html">라이프스타일</a></li>
+                    <li><a href="./kid.html">러닝</a></li>
+                    <li><a href="./kid.html">축구</a></li>
+                    <li><a href="./kid.html">농구</a></li>
+                    <li><a href="./kid.html">샌들 & 슬리퍼</a></li>
+                </ul>./kid.html
+                <ul>./kid.html
+                    <li><a href="./kid.html">의류</a></li>
+                    <li><a href="./kid.html">베이비 (0~4세)</a></li>
+                    <li><a href="./kid.html">리틀키즈 (4~7세)</a></li>
+                    <li><a href="./kid.html">주니어 (8~13세)</a></li>
+                    <li><a href="./kid.html">후디 & 크루</a></li>
+                    <li><a href="./kid.html">팬츠 & 숏 팬츠</a></li>
+                    <li><a href="./kid.html">탑 & 티셔츠</a></li>
+                    <li><a href="./kid.html">트랙수트 & 세트</a></li>
+                    <li><a href="./kid.html">재킷 & 베스트</a></li>
+                    <li><a href="./kid.html">스커트 & 드레스</a></li>
+                    <li><a href="./kid.html">가방 & 모자 & 용품</a></li>
+                </ul>./kid.html
+                <ul>./kid.html
+                    <li><a href="./kid.html">스포츠</a></li>
+                    <li><a href="./kid.html">러닝</a></li>
+                    <li><a href="./kid.html">축구</a></li>
+                    <li><a href="./kid.html">농구</a></li>
+                    <li><a href="./kid.html">테니스</a></li>
+                </ul>
+            </div>
+            <div class="none_tablet navigationFlow">
+                <ul>
+                    <li><a href="#">New To Sale</a></li>
+                </ul>#
+                <ul>#
+                    <li><a href="#">Mens Sale</a></li>
+                    <li><a href="#">러닝</a></li>
+                    <li><a href="#">라이프스타일</a></li>
+                    <li><a href="#">트레이닝</a></li>
+                    <li><a href="#">농구 & 조던</a></li>
+                    <li><a href="#">골프 & 테니스</a></li>
+                    <li><a href="#">축구</a></li>
+                </ul>#
+                <ul>#
+                    <li><a href="#">Womens Sale</a></li>
+                    <li><a href="#">러닝</a></li>
+                    <li><a href="#">라이프스타일</a></li>
+                    <li><a href="#">트레이닝</a></li>
+                    <li><a href="#">골프 & 테니스</a></li>
+                </ul>#
+                <ul>#
+                    <li><a href="#">Kids Sale</a></li>
+                    <li><a href="#">베이비 (0~4세)</a></li>
+                    <li><a href="#">리틀키즈 (4~7세)</a></li>
+                    <li><a href="#">주니어 (8~13세)</a></li>
+                </ul>
+            </div>
         </div>
 
         <!-- 본문영역 -->
-        <article>
+        <article id="main_article">
             <div class="none_mobile">
                 <!-- 캐러셀<opts: fade, inteval, aria-label> -->
                 <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
