지도 구현 전 커밋

--- a/men.html
+++ b/men.html
@@ -21,20 +21,20 @@
         <div id="header01">
             <img id="icon_jordan" src="./image_hong/jordan.png" alt="">
             <div id="top_menu">
-                <a href="">고객센터</a> |
-                <a href="">멤버가입</a> |
-                <a href="">로그인</a>                
+                <a href="#">고객센터</a> |
+                <a href="#">멤버가입</a> |
+                <a href="#">로그인</a>                
            </div>
         </div>
 
         <div id="header02">
-            <img id="Nike_logo" src="./image_hong/nike_logo.png">
+            <a href="./index.html"><img id="Nike_logo" src="./image_hong/nike_logo.png"></a>
             <div id="main_menu">                        
                 <ul class="header-bottom-nav">                
-                    <li><a href="#">New Releases</a></li>
-                    <li><a href="#">Men</a></li>
-                    <li><a href="#" style="margin-left: 20px;">Women</a></li>
-                    <li><a href="#">Kids</a></li>
+                    <li><a href="./new.html">New Releases</a></li>
+                    <li><a href="./men.html">Men</a></li>
+                    <li><a href="./women.html" style="margin-left: 20px;">Women</a></li>
+                    <li><a href="kid.html">Kids</a></li>
                 </ul>
             </div>
             
