--- a/NikeMap.html
+++ b/NikeMap.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>나이키 직영점 매장정보</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>나이키 매장정보</title>
 
         <style>
             #map{
