--- a/new.html
+++ b/new.html
@@ -334,8 +334,8 @@
             </div>
             <hr>
             <div id="reserved">
-                <img src="" alt="">
-                <p>2021 Nike, lnc. All Rights Reserved</p>
+                 <div><a href="./map.html"><img src="./image_ma/map.png" alt="" style="width: 20px;"></a> </div>  
+                <p> 2021 Nike, lnc. All Rights Reserved</p>
                 <ul id="bottom02">
                     <li><a href="#">이용약관</a></li>
                     <li><a href="#">개인정보처리방침</a></li>
