--- a/NikeMap.html
+++ b/NikeMap.html
@@ -7,9 +7,16 @@
         <title>나이키 매장정보</title>
 
         <style>
+            html,
+            body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+
             #map{
                 width: 100%;
-                height: 800px;
+                height: 100%;
             }
         </style>
         <script src="./js_hong/NikeMap.js"></script>
