--- a/men.html
+++ b/men.html
@@ -9,10 +9,10 @@
     <!-- JQuery 적용 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- CSS 스타일 적용 -->
-    <link rel="stylesheet" href="./css_hong/NikeMen.css">
-    <link rel="stylesheet" href="./css_hong/NikeMenMobile.css">
+    <link rel="stylesheet" href="./css_hong/men.css">
+    <link rel="stylesheet" href="./css_hong/menMobile.css">
     <!-- JS 적용 -->
-    <script src="./js_hong/NikeMen.js"></script>
+    <script src="./js_hong/men.js"></script>
     
 </head>
 <body>
