slide menu 구현시도 전 커밋

--- a/men.html
+++ b/men.html
@@ -11,6 +11,7 @@
     <!-- CSS 스타일 적용 -->
     <link rel="stylesheet" href="./css_hong/men.css">
     <link rel="stylesheet" href="./css_hong/menMobile.css">
+    <link rel="stylesheet" href="./css_hong/menMobileSlideMenu.css">
     <!-- JS 적용 -->
     <script src="./js_hong/men.js"></script>
     
@@ -33,7 +34,7 @@
                 <ul class="header-bottom-nav">                
                     <li><a href="./new.html">New Releases</a></li>
                     <li><a href="./men.html">Men</a></li>
-                    <li><a href="./women.html" style="margin-left: 20px;">Women</a></li>
+                    <li><a href="./women.html">Women</a></li>
                     <li><a href="kid.html">Kids</a></li>
                 </ul>
             </div>
