모바일에서 메뉴 구현 완료

--- a/men.html
+++ b/men.html
@@ -10,8 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- CSS 스타일 적용 -->
     <link rel="stylesheet" href="./css_hong/men.css">
-    <link rel="stylesheet" href="./css_hong/menMobile.css">
-    <link rel="stylesheet" href="./css_hong/menMobileSlideMenu.css">
+    <link rel="stylesheet" href="./css_hong/menMobile.css">    
     <!-- JS 적용 -->
     <script src="./js_hong/men.js"></script>
     
@@ -115,6 +114,16 @@
     <div class="container">
         <!-- 왼쪽 사이드 -->
         <aside class="side">
+
+            <div id="main_menu_mobile">                        
+                <ul class="header-bottom-nav-mobile">                
+                    <li><a href="./new.html">New Releases</a></li>
+                    <li><a href="./men.html">Men</a></li>
+                    <li><a href="./women.html">Women</a></li>
+                    <li><a href="kid.html">Kids</a></li>
+                </ul>
+            </div>
+
             <ul>
                 <li><a href=""><strong>의류 전체</strong></a></li>
                 <li><a href="">후디 & 크루</a></li>
