--- a/index.html
+++ b/index.html
@@ -72,16 +72,17 @@
                 <a href="#"><img src="./image_lee/index_icon/index_briefcase_icon.png" alt="basket" class="icon"></a>
             </span>
             <span id="option_menu_region_tablet">
-                <!-- favor 아이콘 -->
-                <a href="#"><img src="./image_lee/index_icon/index_briefcase_icon.png" alt="favorite" class="icon"></a>
-                <!-- favor 아이콘 -->
-                <a href="#"><img src="./image_lee/index_icon/index_search_icon.png" alt="favorite" class="icon"></a>
                 <!-- 장바구니 아이콘 -->
-                <a href="#"><img src="./image_lee/index_icon/index_navi_icon.png" alt="basket" class="icon"></a>
+                <a href="#"><img src="./image_lee/index_icon/index_briefcase_icon.png" alt="favorite" class="icon"></a>
+                <!-- search 아이콘 -->
+                <a href="#"><img src="./image_lee/index_icon/index_search_icon.png" alt="favorite" class="icon"></a>
+                <!-- 햄버거 아이콘 -->
+                <label for="check" class="checkBtn"><img src="./image_lee/index_icon/index_navi_icon.png" alt="basket" class="icon"></label>
+                
             </span>
 
         </nav>
-        <!-- 네이게이션 메가메뉴 -->
+        <!-- 네비게이션 메가메뉴 -->
         <div class="none_tablet" id="mega_menu_container">
             <div class="none_tablet navigationFlow">
                 <ul>
@@ -100,15 +101,15 @@
                     <li><a href="./new.html">의류</a></li>
                     <li><a href="./new.html">용품</a></li>
                     <li><a href="./new.html">전체보기</a></li>
-                </ul>./new.html
-                <ul>./new.html
+                </ul>
+                <ul>
                     <li><a href="./new.html">New For Women</a></li>
                     <li><a href="./new.html">신발</a></li>
                     <li><a href="./new.html">의류</a></li>
                     <li><a href="./new.html">용품</a></li>
                     <li><a href="./new.html">전체보기</a></li>
-                </ul>./new.html
-                <ul>./new.html
+                </ul>
+                <ul>
                     <li><a href="./new.html">New For Kids</a></li>
                     <li><a href="./new.html">신발</a></li>
                     <li><a href="./new.html">의류</a></li>
@@ -126,8 +127,8 @@
                     <li><a href="./men.html">스프링 재킷 컬렉션</a></li>
                     <li><a href="./men.html">스우시 컬렉션</a></li>
                     <li><a href="./men.html">1 ON 1 상품 설명 서비스</a></li>
-                </ul>./men.html
-                <ul>./men.html
+                </ul>
+                <ul>
                     <li><a href="./men.html">신발</a></li>
                     <li><a href="./men.html">신발 전체</a></li>
                     <li><a href="./men.html">라이프스타일</a></li>
@@ -136,8 +137,8 @@
                     <li><a href="./men.html">농구</a></li>
                     <li><a href="./men.html">조던</a></li>
                     <li><a href="./men.html">축구</a></li>
-                </ul>./men.html
-                <ul>./men.html
+                </ul>
+                <ul>
                     <li><a href="./men.html">의류</a></li>
                     <li><a href="./men.html">의류 전체</a></li>
                     <li><a href="./men.html">후디 & 크루</a></li>
@@ -146,8 +147,8 @@
                     <li><a href="./men.html">재킷 & 베스트</a></li>
                     <li><a href="./men.html">숏 팬츠</a></li>
                     <li><a href="./men.html">나이키 프로</a></li>
-                </ul>./men.html
-                <ul>./men.html
+                </ul>
+                <ul>
                     <li><a href="./men.html">스포츠</a></li>
                     <li><a href="./men.html">러닝</a></li>
                     <li><a href="./men.html">트레이닝 & 짐</a></li>
@@ -168,8 +169,8 @@
                     <li><a href="./women.html">에어조틱 컬렉션</a></li>
                     <li><a href="./women.html">홈트레이닝 컬렉션</a></li>
                     <li><a href="./women.html">1 ON 1 상품 설명 서비스</a></li>
-                </ul>./women.html
-                <ul>./women.html
+                </ul>
+                <ul>
                     <li><a href="./women.html">신발</a></li>
                     <li><a href="./women.html">신발 전체</a></li>
                     <li><a href="./women.html">라이프스타일</a></li>
@@ -178,8 +179,8 @@
                     <li><a href="./women.html">농구</a></li>
                     <li><a href="./women.html">조던</a></li>
                     <li><a href="./women.html">축구</a></li>
-                </ul>./women.html
-                <ul>./women.html
+                </ul>
+                <ul>
                     <li><a href="./women.html">의류</a></li>
                     <li><a href="./women.html">의류 전체</a></li>
                     <li><a href="./women.html">스포츠 브라</a></li>
@@ -190,8 +191,8 @@
                     <li><a href="./women.html">재킷 & 베스트</a></li>
                     <li><a href="./women.html">스커트 & 드레스</a></li>
                     <li><a href="./women.html">요가</a></li>
-                </ul>./women.html
-                <ul>./women.html
+                </ul>
+                <ul>
                     <li><a href="./women.html">스포츠</a></li>
                     <li><a href="./women.html">러닝</a></li>
                     <li><a href="./women.html">트레이닝 & 짐</a></li>
@@ -211,8 +212,8 @@
                     <li><a href="./kid.html">조던 키즈</a></li>
                     <li><a href="./kid.html">아이들을 위한 선물</a></li>
                     <li><a href="./kid.html">SALE</a></li>
-                </ul>./kid.html
-                <ul>./kid.html
+                </ul>
+                <ul>
                     <li><a href="./kid.html">신발</a></li>
                     <li><a href="./kid.html">베이비(160mm이하)</a></li>
                     <li><a href="./kid.html">리틀키즈(165~220mm)</a></li>
@@ -222,8 +223,8 @@
                     <li><a href="./kid.html">축구</a></li>
                     <li><a href="./kid.html">농구</a></li>
                     <li><a href="./kid.html">샌들 & 슬리퍼</a></li>
-                </ul>./kid.html
-                <ul>./kid.html
+                </ul>
+                <ul>
                     <li><a href="./kid.html">의류</a></li>
                     <li><a href="./kid.html">베이비 (0~4세)</a></li>
                     <li><a href="./kid.html">리틀키즈 (4~7세)</a></li>
@@ -235,8 +236,8 @@
                     <li><a href="./kid.html">재킷 & 베스트</a></li>
                     <li><a href="./kid.html">스커트 & 드레스</a></li>
                     <li><a href="./kid.html">가방 & 모자 & 용품</a></li>
-                </ul>./kid.html
-                <ul>./kid.html
+                </ul>
+                <ul>
                     <li><a href="./kid.html">스포츠</a></li>
                     <li><a href="./kid.html">러닝</a></li>
                     <li><a href="./kid.html">축구</a></li>
@@ -247,8 +248,8 @@
             <div class="none_tablet navigationFlow">
                 <ul>
                     <li><a href="#">New To Sale</a></li>
-                </ul>#
-                <ul>#
+                </ul>
+                <ul>
                     <li><a href="#">Mens Sale</a></li>
                     <li><a href="#">러닝</a></li>
                     <li><a href="#">라이프스타일</a></li>
@@ -256,15 +257,15 @@
                     <li><a href="#">농구 & 조던</a></li>
                     <li><a href="#">골프 & 테니스</a></li>
                     <li><a href="#">축구</a></li>
-                </ul>#
-                <ul>#
+                </ul>
+                <ul>
                     <li><a href="#">Womens Sale</a></li>
                     <li><a href="#">러닝</a></li>
                     <li><a href="#">라이프스타일</a></li>
                     <li><a href="#">트레이닝</a></li>
                     <li><a href="#">골프 & 테니스</a></li>
-                </ul>#
-                <ul>#
+                </ul>
+                <ul>
                     <li><a href="#">Kids Sale</a></li>
                     <li><a href="#">베이비 (0~4세)</a></li>
                     <li><a href="#">리틀키즈 (4~7세)</a></li>
@@ -274,7 +275,7 @@
         </div>
 
         <!-- 본문영역 -->
-        <article id="main_article">
+        <article id="main_article" style="position: relative; z-index: 1; top: -100%;">
             <div class="none_mobile">
                 <!-- 캐러셀<opts: fade, inteval, aria-label> -->
                 <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -568,7 +569,7 @@
                 <div>
                     <ul>
                         <li><a href="#">주문배송</a></li>
-                        <li><a href="http://moondroid.dothome.co.kr/store.html">매장안내</a></li>
+                        <li><a href="http://moondroid.dothome.co.kr/nike/store_lee.html">매장안내</a></li>
                         <li><a href="#">나이키 트레이닝 가이드</a></li>
                         <li><a href="#">로그인</a></li>
                         <li><a href="#">멤버 가입</a></li>
@@ -603,8 +604,8 @@
                 <div class="only_mobile" id="information_region_mobile">
                     <ul>
                         <li><a href="#">주문배송</a></li>
-                        <li><a href="#">매장안내</a></li>
-                        <li><a href="#">고객센터</a></li>
+                        <li><a href="http://moondroid.dothome.co.kr/nike/store_lee.html">매장안내</a></li>
+                        <li><a href="./board_lee.html">고객센터</a></li>
                     </ul>
                 </div>
             </div>
@@ -648,6 +649,21 @@
             </div>
         </footer>
     </div>
+
+    <!-- 모바일전용 숨겨진 사이드메뉴 -->
+    <input type="checkbox" id="check" style="display: none;">
+    <ul class="adidasmenu" style="z-index: 3;">
+        <li><a href="./new.html">New Releases</a></li>
+        <li><a href="./men.html">Men</a></li>
+        <li><a href="./women.html">Women</a></li>
+        <li><a href="./kid.html">Kids</a></li>  
+        <li><a href="#">SALE</a></li>  
+        <li><a href="#">Brand</a></li>
+        <div style="height: 50px;"></div>  
+        <li><a href="http://moondroid.dothome.co.kr/nike/store_lee.html">매장안내</a></li>  
+        <li><a href="./board_lee.html">1:1문의</a></li>  
+    </ul>
+    
 </body>
 
 </html>
