--- a/store_lee.html
+++ b/store_lee.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=52msze0mo2"></script>
+    <!-- 네이버맵 -->
+    <script type="text/javascript"
+        src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=52msze0mo2"></script>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
-<body>
-    <div id="map" style="width:100%;height:400px;"></div>
 
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=52msze0mo2&callback=initMap"></script>
+<body>
+    <div id="map" style="width:100%;height:900px;"></div>
+    <img src="./image_lee/index_icon/logo_nike_title_map.jpg" alt="">
+
+    <script type="text/javascript"
+        src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=52msze0mo2&callback=initMap"></script>
     <script type="text/javascript">
         var map = null;
 
@@ -19,16 +27,43 @@
                 center: new naver.maps.LatLng(37.3595704, 127.105399),
                 zoom: 10
             });
+
+            $.ajax({
+                url: "./json_lee/nike_store.json",
+                data: "json",
+                success: function (data) {
+                    for (let i = 0; i < data.length; i++) {
+                        let contentString = [
+                            '<div class="iw_inner" style="padding:20px;">',
+                            '   <h3>'+ data[i].name +'</h3>',
+                            '   <p> 주소 : ' + data[i].address1 + data[i].address2 + '<br>',
+                                    '전화번호 : ' + data[i].phone + '<br>',
+                                    '영업시간 : ' + data[i].additionalAttributes.영업시간,
+                            '   </p>',
+                            '</div>'
+                        ].join('');
+                        let marker = new naver.maps.Marker({
+                            position: new naver.maps.LatLng(data[i].latitude, data[i].longitude),
+                            map: map,
+                            icon: './image_lee/index_icon/logo_nike_title_map.jpg'
+                        });
+                        let infowindow = new naver.maps.InfoWindow({
+                            content: contentString
+                        });
+                        naver.maps.Event.addListener(marker, "click", function (e) {
+                            if (infowindow.getMap()) {
+                                infowindow.close();
+                            } else {
+                                infowindow.open(map, marker);
+                            }
+                        });
+                    }
+                },
+                error: function (e) {
+                }
+            });
         }
     </script>
-
-    <script>
-        var mapOptions = {
-            center: new naver.maps.LatLng(37.3595704, 127.105399),
-            zoom: 10
-        };
-        
-        var map = new naver.maps.Map('map', mapOptions);
-        </script>
 </body>
+
 </html>
