--- a/kid.html
+++ b/kid.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="QA">
-        <a id="gotoQA" href="./qna.html" >질문하기</a>
+        <a id="gotoQA" href="./kidqna.html" >질문하기</a>
     </div>
     <input type="checkbox" id="check">
     <div>
