2차 merge 전 최종 커밋

--- a/map_hong.html
+++ b/map_hong.html
@@ -19,7 +19,7 @@
                 height: 100%;
             }
         </style>
-        <script src="./js_hong/NikeMap.js"></script>
+        <script src="./js_hong/map_hong.js"></script>
 
         <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
         <script
