--- a/men.html
+++ b/men.html
@@ -243,7 +243,7 @@
     <footer>
         <div id="footer01">
             <ul class="footer01_ul01">
-                <li><a href="NikeMap.html">매장안내</a></li>
+                <li><a href="map_hong.html">매장안내</a></li>
                 <li><a href="#">나이키 트레이닝 가이드</a></li>
                 <li><a href="#">로그인</a></li>
                 <li><a href="#">멤버 가입</a></li>
@@ -255,7 +255,7 @@
                 <li><a href="#">배송</a></li>
                 <li><a href="#">주문배송조회</a></li>
                 <li><a href="#">멤버쉽 혜택/서비스</a></li>
-                <li><a href="./notify.html">공지사항</a></li>
+                <li><a href="./board_hong.html">공지사항</a></li>
                 <li><a href="#">1:1 채팅 문의</a></li>
                 <li><a href="#">1:1 이메일문의</a></li>
                 <li><a href="#">이용약관</a></li>
