--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 <div>
                     <ul>
                         <li><a href="#">주문배송</a></li>
-                        <li><a href="http://moondroid.dothome.co.kr/nike/store_lee.html">매장안내</a></li>
+                        <li><a href="./store_lee.html">매장안내</a></li>
                         <li><a href="#">나이키 트레이닝 가이드</a></li>
                         <li><a href="#">로그인</a></li>
                         <li><a href="#">멤버 가입</a></li>
@@ -604,7 +604,7 @@
                 <div class="only_mobile" id="information_region_mobile">
                     <ul>
                         <li><a href="#">주문배송</a></li>
-                        <li><a href="http://moondroid.dothome.co.kr/nike/store_lee.html">매장안내</a></li>
+                        <li><a href="./store_lee.html">매장안내</a></li>
                         <li><a href="./board_lee.html">고객센터</a></li>
                     </ul>
                 </div>
@@ -660,7 +660,7 @@
         <li><a href="#">SALE</a></li>  
         <li><a href="#">Brand</a></li>
         <div style="height: 50px;"></div>  
-        <li><a href="http://moondroid.dothome.co.kr/nike/store_lee.html">매장안내</a></li>  
+        <li><a href="./store_lee.html">매장안내</a></li>  
         <li><a href="./board_lee.html">1:1문의</a></li>  
     </ul>
     
