2차 merge 전 마지막 커밋

--- a/board_hong.html
+++ b/board_hong.html
@@ -42,6 +42,21 @@
             <a href="./board_hong_detail.html">이용약관 및 개인정보 처리방침 변경 안내</a>
         </div>
         <div class="article_post">
+            <a href="./board_hong_detail.html">인증 시스템 변경으로 인한 휴대폰 인증 안내</a>
+        </div>
+        <div class="article_post">
+            <a href="./board_hong_detail.html">상품 리뷰 서비스 변경 안내</a>
+        </div>
+        <div class="article_post">
+            <a href="./board_hong_detail.html">개인정보 처리방침 변경 안내</a>
+        </div>
+        <div class="article_post">
+            <a href="./board_hong_detail.html">NIKE PREMIUM+ 앱 서비스 중단 안내</a>
+        </div>
+        <div class="article_post">
+            <a href="./board_hong_detail.html">루나 컨트롤 베이퍼 착화 제한에 대한 고지 안내</a>
+        </div>
+        <div class="article_post">
             <a href="./board_hong_detail.html">개인정보 처리방침 변경 안내</a>
         </div>
     </article>
