--- a/new.html
+++ b/new.html
@@ -334,7 +334,7 @@
             </div>
             <hr>
             <div id="reserved">
-                 <div><a href="./map.html"><img src="./image_ma/map.png" alt="" style="width: 20px;"></a> </div>  
+                 <div><a href="./ma_map.html"><img src="./image_ma/map.png" alt="" style="width: 20px;"></a> </div>  
                 <p> 2021 Nike, lnc. All Rights Reserved</p>
                 <ul id="bottom02">
                     <li><a href="#">이용약관</a></li>
