정말 마지막 커밋

--- a/men.html
+++ b/men.html
@@ -123,7 +123,7 @@
                 </ul>
             </div>
 
-            <ul>
+            <ul id="aside_menu">
                 <li><a href=""><strong>의류 전체</strong></a></li>
                 <li><a href="">후디 & 크루</a></li>
                 <li><a href="">팬츠 & 타이츠</a></li>
