add logo hyper link

--- a/women.html
+++ b/women.html
@@ -53,7 +53,7 @@
             <div class="line2">
         
             <div class="logo">
-                <img src="./image/logo.png" id="logo">
+                <a href="./index.html"><img src="./image/logo.png" id="logo"></a>
                 <div class="icon_only_tablet">
                     <img src="./image/icon_heart.png" >
                     <img src="./image/icon_bag.png">
