--- a/women.html
+++ b/women.html
@@ -63,7 +63,7 @@
         
                 <ul class="mainCategory">
                     <li><a href="./new.html">New Releases</a></li>
-                    <li> <a href="./NikeMen_index.html">Men</a></li>
+                    <li> <a href="./men.html">Men</a></li>
                     <li> <a href="./women.html">Women</a></li>
                     <li> <a href="./kid.html">Kids</a></li>
                     <li> <a href="#">Sale</a></li>
